# maro-demo

./: .gitignore  PAPER.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-hf-space.yml
.streamlit/: config.toml
data/: iffy_untrusted.json  rules_charliehebdo.json
demo/: app.py
scripts/: download_pheme.py  refresh_iffy_untrusted.py  run_evaluation.py  run_inference.py  run_optimization.py  show_trajectory.py
src/maro/: __init__.py  config.py  llm.py  optimization.py  pipeline.py  trace.py
src/maro/agents/: __init__.py  base.py  comment.py  fact_checking.py  fact_questioning.py  judge.py  linguistic.py  questioning.py  rule_optimizer.py
src/maro/dataset/: __init__.py  pheme_loader.py  validation_tasks.py
src/maro/prompts/: comment.txt  fact_checking.txt  fact_questioning.txt  judge.txt  linguistic.txt  questioning.txt  rule_optimizer.txt
src/maro/tools/: __init__.py  serper.py  trust.py  wikipedia.py
tests/: conftest.py  test_implicit_verdict.py  test_judge_parser.py  test_key_findings.py  test_pipeline_mocked.py  test_trust.py  test_validation_tasks.py
